--- a/src/Smartstore.Web/Views/Checkout/Partials/CheckoutOrderTotals.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/CheckoutOrderTotals.cshtml
@@ -4,9 +4,8 @@
 @model CheckoutModelBase
 
 @{
-    var cart = Model is CheckoutConfirmModel confirmModel
-        ? confirmModel.ShoppingCart
-        : null;
+    var confirmModel = Model as CheckoutConfirmModel;
+    var cart = confirmModel?.ShoppingCart;
 }
 
 <div class="cart-footer@(Model.IsConfirmPage ? string.Empty : " cart-footer-panel")">
@@ -29,6 +28,8 @@
 
         <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
             <div class="col-12 mt-3 cart-footer-actions">
+                <div sm-if="Model.IsConfirmPage" class="cart-terms">@Html.Raw(confirmModel.TermsOfService)</div>
+
                 <zone name="order_summary_buttons_before" />
 
                 <div class="cart-buttons">
