--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/OrderTotalOnly.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/OrderTotalOnly.cshtml
@@ -5,15 +5,15 @@
 <div class="cart-bottom-total">
     <zone name="order_totals_before" />
 
-    <span class="item fs-h5 fwm">@T("ShoppingCart.Totals.OrderTotal"):</span>
+    <span class="total-item fs-h5 fwm">@T("ShoppingCart.Totals.OrderTotal"):</span>
     @if (Model.OrderTotal != null)
     {
-        <span class="item fs-h5 fwm">@Model.OrderTotal</span>
+        <span class="total-item fs-h5 fwm">@Model.OrderTotal</span>
     }
     else
     {
-        <span class="item fs-h6 text-muted">@T("ShoppingCart.Totals.CalculatedDuringCheckout")</span>
+        <span class="total-item fs-h6 text-muted">@T("ShoppingCart.Totals.CalculatedDuringCheckout")</span>
     }
-    @*TODO: (mg) add EasyCredit interest and total incl. interest via new zone "order_totals_after".*@
+
     <zone name="order_totals_after" />
 </div>
