--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -3,7 +3,8 @@
 @model OrderTotalsModel
 
 @{
-    var shippingLabelHtml = Model.ShippingInfoUrl.HasValue()
+    var shippingInfoUrl = await Url.TopicAsync("ShippingInfo", true);
+    var shippingLabelHtml = shippingInfoUrl.HasValue()
         ? $"<a href='javascript:;' data-toggle='modal' data-target='#shipping-info-modal'>{T("ShoppingCart.Totals.Shipping")}</a>:"
         : $"{T("ShoppingCart.Totals.Shipping")}:";
 }
@@ -157,15 +158,3 @@
         </td>
     </tr>
 </table>
-
-@if (Model.ShippingInfoUrl.HasValue())
-{
-    <modal id="shipping-info-modal" sm-render-at-page-end="true" sm-size="FlexSmall">
-        <modal-body>
-            <iframe src="@Model.ShippingInfoUrl" frameBorder="0" class="h-100"></iframe>
-        </modal-body>
-        <modal-footer>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">@T("Common.Close")</button>
-        </modal-footer>
-    </modal>
-}
