--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -5,6 +5,7 @@
 @{
     var hasItems = Model.Items.Any();
     var checkoutAllowed = Model.Items.Any(x => x.Active);
+    var shippingInfoUrl = await Url.TopicAsync("ShippingInfo", true);
 
     var paymentButtons = hasItems
         ? (await Model.ButtonPaymentMethods.Items
@@ -14,7 +15,7 @@
         : Enumerable.Empty<IHtmlContent>();
 }
 
-<div class="order-summary-content cart-content" 
+<div class="order-summary-content cart-content"
      data-empty-text="@T("ShoppingCart.CartIsEmpty")"
      data-update-item-url="@Url.Action("UpdateCartItem", "ShoppingCart")">
     <zone name="order_summary_content_before" />
@@ -44,80 +45,80 @@
                     </div>
                 </div>
                 @* Cart Summary *@
-            <div class="col-lg-5 col-xl-4">
-                <div id="cart-select-products-warning" class="alert alert-warning@(checkoutAllowed ? " d-none" : string.Empty)">
-                    @Html.Raw(Model.CheckoutNotAllowedWarning)
-                </div>
-                <div id="cart-summary-container" class="cart-footer@(checkoutAllowed ? string.Empty : " d-none")">
-                    <div class="row">
-                        <div class="col-12 cart-footer-group">
-                            @if (Model.IsEditable)
-                            {
-                                <partial name="_CheckoutAttributes" model="Model.CheckoutAttributes" view-data="new ViewDataDictionary(ViewData)" />
-                            }
+                <div class="col-lg-5 col-xl-4">
+                    <div id="cart-select-products-warning" class="alert alert-warning@(checkoutAllowed ? " d-none" : string.Empty)">
+                        @Html.Raw(Model.CheckoutNotAllowedWarning)
+                    </div>
+                    <div id="cart-summary-container" class="cart-footer@(checkoutAllowed ? string.Empty : " d-none")">
+                        <div class="row">
+                            <div class="col-12 cart-footer-group">
+                                @if (Model.IsEditable)
+                                {
+                                    <partial name="_CheckoutAttributes" model="Model.CheckoutAttributes" view-data="new ViewDataDictionary(ViewData)" />
+                                }
 
-                            <zone name="order_summary_totals_before" />
+                                <zone name="order_summary_totals_before" />
 
-                            <div id="order-totals">
-                                @await Component.InvokeAsync("OrderTotals", new { isEditable = Model.IsEditable })
+                                <div id="order-totals">
+                                    @await Component.InvokeAsync("OrderTotals", new { isEditable = Model.IsEditable })
+                                </div>
+
+                                <zone name="order_summary_totals_after" />
+                            </div>
+                            <div class="col-12 cart-footer-group" sm-suppress-if-empty>
+                                @if (Model.IsEditable)
+                                {
+                                    <zone name="order_summary_actions_before" />
+
+                                    <partial name="_DiscountBox" model="Model.DiscountBox" />
+                                    <partial name="_GiftCardBox" model="Model.GiftCardBox" />
+                                    <partial name="_RewardPointsBox" model="Model.RewardPoints" />
+                                    <partial name="EstimateShipping" model="Model.EstimateShipping" />
+
+                                    <zone name="order_summary_actions_after" />
+                                }
+                                else
+                                {
+                                    <div sm-if="Model.CheckoutAttributeInfo.HasValue()" class="selected-checkout-attributes">
+                                        @Html.Raw(Model.CheckoutAttributeInfo)
+                                    </div>
+                                }
                             </div>
 
-                            <zone name="order_summary_totals_after" />
-                        </div>
-                        <div class="col-12 cart-footer-group" sm-suppress-if-empty>
-                            @if (Model.IsEditable)
-                            {
-                                <zone name="order_summary_actions_before" />
+                            <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
+                                <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-actions">
+                                    <zone name="order_summary_buttons_before" />
 
-                                <partial name="_DiscountBox" model="Model.DiscountBox" />
-                                <partial name="_GiftCardBox" model="Model.GiftCardBox" />
-                                <partial name="_RewardPointsBox" model="Model.RewardPoints" />
-                                <partial name="EstimateShipping" model="Model.EstimateShipping" />
-
-                                <zone name="order_summary_actions_after" />
-                            }
-                            else
-                            {
-                                <div sm-if="Model.CheckoutAttributeInfo.HasValue()" class="selected-checkout-attributes">
-                                    @Html.Raw(Model.CheckoutAttributeInfo)
-                                </div>
-                            }
-                        </div>
-
-                        <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
-                            <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-actions">
-                                <zone name="order_summary_buttons_before" />
-
-                                <div class="cart-buttons">
-                                    <div id="start-checkout-buttons" class="d-flex flex-column row-gap-2">
-                                        <div class="checkout-buttons">
-                                            <input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" class="d-none" />
-                                            <button type="button" id="checkout" name="checkout" class="btn btn-primary btn-lg btn-block btn-checkout">
-                                                <span>@T("Checkout.Button")</span>
-                                                <i class="fa fa-angle-right"></i>
-                                            </button>
-                                        </div>
-                                        <div sm-if="paymentButtons.Any()" class="addon-buttons">
-                                            <div class="d-flex flex-column row-gap-2">
-                                                <div class="text-center">
-                                                    <span>@T("ShoppingCart.AlternativePaymentButtons")</span>
+                                    <div class="cart-buttons">
+                                        <div id="start-checkout-buttons" class="d-flex flex-column row-gap-2">
+                                            <div class="checkout-buttons">
+                                                <input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" class="d-none" />
+                                                <button type="button" id="checkout" name="checkout" class="btn btn-primary btn-lg btn-block btn-checkout">
+                                                    <span>@T("Checkout.Button")</span>
+                                                    <i class="fa fa-angle-right"></i>
+                                                </button>
+                                            </div>
+                                            <div sm-if="paymentButtons.Any()" class="addon-buttons">
+                                                <div class="d-flex flex-column row-gap-2">
+                                                    <div class="text-center">
+                                                        <span>@T("ShoppingCart.AlternativePaymentButtons")</span>
+                                                    </div>
+                                                    @*Payment method buttons (e.g. Paypal, Amazon Pay)*@
+                                                    @foreach (var button in paymentButtons)
+                                                    {
+                                                        @button
+                                                    }
                                                 </div>
-                                                @*Payment method buttons (e.g. Paypal, Amazon Pay)*@
-                                                @foreach (var button in paymentButtons)
-                                                {
-                                                    @button
-                                                }
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <zone name="order_summary_buttons_after" />
-                            </div>
-                        </zone>
+                                    <zone name="order_summary_buttons_after" />
+                                </div>
+                            </zone>
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 @* Back Button *@
                 <div sm-if="Model.IsEditable" class="col-12 col-md-6 col-lg-7 col-xl-4 col-xxl-3 my-3">
@@ -172,6 +173,18 @@
             });
         });
     </script>
+}
+
+@if (shippingInfoUrl.HasValue())
+{
+    <modal id="shipping-info-modal" sm-render-at-page-end="true" sm-size="FlexSmall">
+        <modal-body>
+            <iframe src="@shippingInfoUrl" frameBorder="0" class="h-100"></iframe>
+        </modal-body>
+        <modal-footer>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">@T("Common.Close")</button>
+        </modal-footer>
+    </modal>
 }
 
 @if (Model.IsEditable)
