--- a/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
@@ -270,9 +270,9 @@
                         <smart-label asp-for="Intro" />
                     </div>
                     <div class="adminData wide">
-                        <ai-text-creation asp-for="Intro" entity-name="@Model.Title" entity-type="Topic">
+                        <ai-text asp-for="Intro" entity-name="@Model.Title" entity-type="Topic">
                             <textarea asp-for="Intro" rows="1"></textarea>
-                        </ai-text-creation>
+                        </ai-text>
                         <span asp-validation-for="Intro"></span>
                     </div>
                 </div>
@@ -281,13 +281,13 @@
                         <smart-label asp-for="Body" />
                     </div>
                     <div class="adminData wide">
-                        <ai-rich-text-creation asp-for="Body"
-                                               entity-name="@Model.Title"
-                                               entity-type="Topic"
-                                               display-additional-content-options="true"
-                                               display-link-options="true">
+                        <ai-rich-text asp-for="Body"
+                                      entity-name="@Model.Title"
+                                      entity-type="Topic"
+                                      display-additional-content-options="true"
+                                      display-link-options="true">
                             <editor asp-for="Body" />
-                        </ai-rich-text-creation>
+                        </ai-rich-text>
                         <span asp-validation-for="Body"></span>
                     </div>
                 </div>
@@ -348,13 +348,13 @@
                         <smart-label asp-for="MetaTitle" />
                     </div>
                     <div class="adminData">
-                        <ai-text-creation asp-for="MetaTitle"
-                                          entity-name="@Model.Title"
-                                          entity-type="Topic"
-                                          display-optimization-options="false"
-                                          display-word-limit="false">
+                        <ai-text asp-for="MetaTitle"
+                                 entity-name="@Model.Title"
+                                 entity-type="Topic"
+                                 display-optimization-options="false"
+                                 display-word-limit="false">
                             <input asp-for="MetaTitle" />
-                        </ai-text-creation>
+                        </ai-text>
                         <span asp-validation-for="MetaTitle"></span>
                     </div>
                 </div>
@@ -363,13 +363,13 @@
                         <smart-label asp-for="MetaDescription" />
                     </div>
                     <div class="adminData">
-                        <ai-text-creation asp-for="MetaDescription"
-                                          entity-name="@Model.Title"
-                                          entity-type="Topic"
-                                          display-optimization-options="false"
-                                          display-word-limit="false">
+                        <ai-text asp-for="MetaDescription"
+                                 entity-name="@Model.Title"
+                                 entity-type="Topic"
+                                 display-optimization-options="false"
+                                 display-word-limit="false">
                             <textarea asp-for="MetaDescription"></textarea>
-                        </ai-text-creation>
+                        </ai-text>
                         <span asp-validation-for="MetaDescription"></span>
                     </div>
                 </div>
@@ -378,13 +378,13 @@
                         <smart-label asp-for="MetaKeywords" />
                     </div>
                     <div class="adminData">
-                        <ai-text-creation asp-for="MetaKeywords"
-                                          entity-name="@Model.Title"
-                                          entity-type="Topic"
-                                          display-optimization-options="false"
-                                          display-word-limit="false">
+                        <ai-text asp-for="MetaKeywords"
+                                 entity-name="@Model.Title"
+                                 entity-type="Topic"
+                                 display-optimization-options="false"
+                                 display-word-limit="false">
                             <input asp-for="MetaKeywords" />
-                        </ai-text-creation>
+                        </ai-text>
                         <span asp-validation-for="MetaKeywords"></span>
                     </div>
                 </div>
