--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -270,9 +270,9 @@
                     <smart-label asp-for="ShortDescription" />
 			    </div>
 			    <div class="adminData">
-                    <ai-text-creation asp-for="ShortDescription" entity-name="@Model.Name" entity-type="Product">
+                    <ai-text asp-for="ShortDescription" entity-name="@Model.Name" entity-type="Product">
                         <textarea asp-for="ShortDescription"></textarea>
-                    </ai-text-creation>
+                    </ai-text>
 				    <span asp-validation-for="ShortDescription"></span>
 			    </div>
 		    </div>
@@ -281,9 +281,9 @@
                     <smart-label asp-for="FullDescription" />
 			    </div>
                 <div class="adminData wide">
-                    <ai-rich-text-creation asp-for="FullDescription" entity-name="@Model.Name" entity-type="Product">
+                    <ai-rich-text asp-for="FullDescription" entity-name="@Model.Name" entity-type="Product">
                         <editor asp-for="FullDescription" />
-                    </ai-rich-text-creation>
+                    </ai-rich-text>
                     <span asp-validation-for="FullDescription"></span>
                 </div>
 		    </div>
