--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.SEO.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.SEO.cshtml
@@ -51,13 +51,13 @@
                     <smart-label asp-for="MetaTitle" />
                 </div>
                 <div class="adminData">
-                    <ai-text-creation asp-for="MetaTitle"
-                                      entity-name="@Model.Name"
-                                      entity-type="Product"
-                                      display-optimization-options="false"
-                                      display-word-limit="false">
+                    <ai-text asp-for="MetaTitle"
+                             entity-name="@Model.Name"
+                             entity-type="Product"
+                             display-optimization-options="false"
+                             display-word-limit="false">
                         <input asp-for="MetaTitle" />
-                    </ai-text-creation>
+                    </ai-text>
                     <span asp-validation-for="MetaTitle"></span>
                 </div>
             </div>
@@ -66,13 +66,13 @@
                     <smart-label asp-for="MetaDescription" />
                 </div>
                 <div class="adminData">
-                    <ai-text-creation asp-for="MetaDescription"
-                                      entity-name="@Model.Name"
-                                      entity-type="Product"
-                                      display-optimization-options="false"
-                                      display-word-limit="false">
+                    <ai-text asp-for="MetaDescription"
+                             entity-name="@Model.Name"
+                             entity-type="Product"
+                             display-optimization-options="false"
+                             display-word-limit="false">
                         <textarea asp-for="MetaDescription"></textarea>
-                    </ai-text-creation>
+                    </ai-text>
                     <span asp-validation-for="MetaDescription"></span>
                 </div>
             </div>
@@ -81,13 +81,13 @@
                     <smart-label asp-for="MetaKeywords" />
                 </div>
                 <div class="adminData">
-                    <ai-text-creation asp-for="MetaKeywords"
-                                      entity-name="@Model.Name"
-                                      entity-type="Product"
-                                      display-optimization-options="false"
-                                      display-word-limit="false">
+                    <ai-text asp-for="MetaKeywords"
+                             entity-name="@Model.Name"
+                             entity-type="Product"
+                             display-optimization-options="false"
+                             display-word-limit="false">
                         <input asp-for="MetaKeywords" />
-                    </ai-text-creation>
+                    </ai-text>
                     <span asp-validation-for="MetaKeywords"></span>
                 </div>
             </div>
