Icon size sm must be applied to .btn-sm

--- a/src/Smartstore.Web/wwwroot/shared/_forms.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_forms.scss
@@ -159,6 +159,7 @@ fieldset.content-group {
         --inline-icon-font-size: #{$font-size-lg};
 	}
 
+    & .btn-sm,
 	&.input-group-sm {
         --inline-icon-size: #{$input-height-sm};
         --inline-icon-font-size: #{$font-size-sm};
