--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -64,7 +64,7 @@
 @if (cart.Items.Any())
 {
     <div>
-        <div sm-if="Model.IsConfirmPage" class="row align-items-end mb-2">
+        <div class="row align-items-end mb-2">
             <div class="col">
                 <span class="h5">
                     @Html.Raw(T("ShoppingCart.Products"))
