Show shipping country in checkout order totals

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -410,7 +410,7 @@
     font-size: 90%;
     margin-block-end: 1rem;
     line-height: normal;
-    text-wrap: balance;
+    //text-wrap: balance;
 }
 
 
