--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/OrderTotalOnly.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/OrderTotalOnly.cshtml
@@ -2,7 +2,7 @@
 
 @model OrderTotalsModel
 
-<div class="cart-bottom-total">
+<div class="bottom-order-total">
     <zone name="order_totals_before" />
 
     <span class="total-item fs-h5 fwm">@T("ShoppingCart.Totals.OrderTotal"):</span>
