--- a/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
@@ -24,6 +24,7 @@
 <zone name="checkout_confirm_before_summary" />
 <zone name="order_summary_content_before" />
 
+@*INFO: OrderReviewData required for "Terminal with payment".*@
 <partial name="OrderReviewData" model="cart.OrderReviewData" />
 
 @if (cart.Items.Any())
@@ -59,7 +60,7 @@ else
     </div>
 }
 
-<div class="cart-bottom-total-container card card-body">
+<div class="bottom-order-total-container card card-body">
     <div class="row">
         <div class="col col-auto cart-buttons">
             <button type="button" class="btn btn-danger btn-lg @Model.NextStepClass" onclick="return false;">
