--- a/src/Smartstore.Web/Views/Checkout/Partials/OrderReviewData.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/OrderReviewData.cshtml
@@ -1,12 +1,7 @@
-﻿@using Smartstore.Web.Models.Common;
-@using Smartstore.Web.Models.Cart;
+﻿@using Smartstore.Web.Models.Common
+@using Smartstore.Web.Models.Checkout
 
-@model ShoppingCartModel.OrderReviewDataModel
-
-@if (!Model.Display)
-{
-    return;
-}
+@model CheckoutConfirmModel.OrderReviewDataModel
 
 @{
     async Task RenderAddress(AddressModel address)
