Moved a CSS class

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
@@ -366,3 +366,10 @@
     font-weight: $font-weight-medium !important;
     @include text-truncate();
 }
+
+.terms-of-service {
+    font-size: 90%;
+    margin-block-end: 1rem;
+    line-height: normal;
+    //text-wrap: balance;
+}
