--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -99,7 +99,7 @@ else
 
 <div class="bottom-order-total-container card card-body">
     <div class="row">
-        <div class="cart-terms">@Html.Raw(Model.TermsOfService)</div>
+        <div class="terms-of-service">@Html.Raw(Model.TermsOfService)</div>
     </div>
     <div class="row">
         <div class="col col-auto cart-buttons">
